# imprecise-evolution

./: .gitignore  Makefile  README.md  dune-project  models.opam  utils.opam
doc/: HartfielMarkovSetChainsErrata.txt  README.md  ReHartfielIntervals.md  hilomultIsNotCommutativeOrAssociative.md  setchains.nts
src/: loadit.ml
src/experiments/: jbuild.disabled  test.ml  test2.ml
src/lib/models/: app_fns.ml  credalsetIO.ml  dune  genstate.ml  genstate.mli  jbuild  main.ml  seq.ml  seq.mli  setchains.ml  tdists.ml  tdists.mli  tranmats.ml  wrightfisher.ml
src/lib/utils/: dune  genl.ml  jbuild  prob.ml  seq.ml  seq.mli
src/misc/: exampledata.ml  hermansskulj115.ml  interval.ml  markov1.ml  mat.ml  pomat.ml  setchain_egs.ml
